# fastpad

./: .gitignore  AGENTS.md  Cargo.toml  ENGINEERING_PRINCIPLES.md  README.md  start.sh
crates/fastpad_app_macos/: Cargo.toml  Info.plist
crates/fastpad_app_macos/Assets/: AppIcon.icns
crates/fastpad_app_macos/src/: main.rs
crates/fastpad_benchmarks/: Cargo.toml
crates/fastpad_benchmarks/src/: main.rs
crates/fastpad_core/: Cargo.toml
crates/fastpad_core/src/: lib.rs
crates/fastpad_core/tests/: smoke_files.rs
crates/fastpad_diagnostics/: Cargo.toml
crates/fastpad_diagnostics/src/: lib.rs
crates/fastpad_edit/: Cargo.toml
crates/fastpad_edit/src/: lib.rs
crates/fastpad_file/: Cargo.toml
crates/fastpad_file/src/: lib.rs
crates/fastpad_line_index/: Cargo.toml
crates/fastpad_line_index/src/: lib.rs
crates/fastpad_pipeline/: Cargo.toml
crates/fastpad_pipeline/src/: lib.rs
crates/fastpad_render/: Cargo.toml
crates/fastpad_render/src/: lib.rs
crates/fastpad_replace/: Cargo.toml
crates/fastpad_replace/src/: lib.rs
crates/fastpad_search/: Cargo.toml
crates/fastpad_search/src/: lib.rs
crates/fastpad_tail/: Cargo.toml
crates/fastpad_tail/src/: lib.rs
crates/fastpad_tasks/: Cargo.toml
crates/fastpad_tasks/src/: lib.rs
crates/fastpad_viewport/: Cargo.toml
crates/fastpad_viewport/src/: lib.rs
docs/: ARCHITECTURE.md  REQUIREMENTS_TRACE.md  SPEC_CROSSCHECK.md
requirements_status/: ENGINEERING_PRINCIPLES_EXTRA_STATUS.md  IMPLEMENTATION_STATUS.md  Native_macOS_Text_Editor_Project_Objective.md  fastpad_ai_native_complete_srs.json  fastpad_ai_native_srs_overview.md  fastpad_big_text_analysis_requirements.json  fastpad_big_text_analysis_requirements_overview.md  fastpad_true_engineering_blueprint_unix_style.json  fastpad_true_engineering_blueprint_unix_style.md
scripts/: build_macos_app.sh  make_app_icon.sh  run_benchmarks.sh  run_macos_app.sh  smoke_attached_files.sh
