[package]
name = "fastpad_benchmarks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "fastpad-benchmarks"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
fastpad_core = { path = "../fastpad_core" }
fastpad_diagnostics = { path = "../fastpad_diagnostics" }
fastpad_edit = { path = "../fastpad_edit" }
fastpad_file = { path = "../fastpad_file" }
fastpad_render = { path = "../fastpad_render" }
fastpad_search = { path = "../fastpad_search" }
fastpad_tasks = { path = "../fastpad_tasks" }
fastpad_viewport = { path = "../fastpad_viewport" }
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
