[package]
name = "fastpad_line_index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
fastpad_file = { path = "../fastpad_file" }
memchr.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
