[package]
name = "fastpad_render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fastpad_viewport = { path = "../fastpad_viewport" }
serde.workspace = true

[dev-dependencies]
fastpad_file = { path = "../fastpad_file" }
fastpad_line_index = { path = "../fastpad_line_index" }
