[package]
name = "fastpad_viewport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
fastpad_file = { path = "../fastpad_file" }
fastpad_line_index = { path = "../fastpad_line_index" }
serde.workspace = true
